Fixed scroll bug (z-index and canvas issue)

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 	padding-top: 20px;
 	width: 100%;
 	text-align: center;
-	z-index: 100;
 	display:block;
     color: rgb(255, 255, 255);
 	font-family: Verdana, sans-serif;
@@ -34,18 +33,16 @@ p {
 
 .highlighted {
 	color: rgb(255, 255, 255); 
-	/* font-weight: bold;  */
   }
 
 .information-box {
 	position: relative;
-	z-index: 1;
 	width: 50%;
 	margin: 20px;
 	background-color: rgb(45, 45, 45);
 	display:block;
 	border-radius: 15px;
-	overflow: auto;
+	overflow-y: auto;
 }
 
 #wiki-excerpt {
@@ -62,12 +59,25 @@ p {
 	line-height: 150%;
 }
 
+canvas {
+	z-index: -1; 
+  }
+
+#planet-details {
+	display: flex;
+  	justify-content: flex-end;
+	position: absolute;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+}
+
 #bckgrnd {
 	display: flex;
-  justify-content: flex-end;
+  	justify-content: flex-end;
 	background-color: rgb(0, 0, 0);
 	position: absolute;
-	z-index: -1;
+	z-index: -2;
 	width: 100%;
 	height: 100%;
 }
